// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Card component number box should grow elegantly with larger numbers 1`] = `
<View
  style={
    Object {
      "aspectRatio": 1,
      "backgroundColor": "#dddddd",
      "borderRadius": 6,
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "paddingHorizontal": 20,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      size={4}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderBottomRightRadius": 6,
          "borderTopLeftRadius": 6,
          "height": 72,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 72,
        }
      }
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#303030",
              "fontFamily": null,
              "fontSize": 15.75,
              "fontWeight": "700",
              "lineHeight": 17.85,
            }
          }
        >
          7777
        </Text>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": null,
          "fontSize": 25.2,
          "fontWeight": "700",
          "lineHeight": 31.28,
        }
      }
    >
      Sermon Title
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingTop": 10,
        }
      }
    >
      <Svg
        height={18}
        viewBox="0 0 24 24"
        width={18}
      >
        <Path
          d="M3.8182 5.7778v12.4444H14.2V5.7778H3.8182zM16 6v12c0 1.1046-.8954 2-2 2H4c-1.1046 0-2-.8954-2-2V6c0-1.1046.8954-2 2-2h10c1.1046 0 2 .8954 2 2zm4.1818 2.6952L16 11.8084v.3832l4.1818 3.251V8.695zM16 14.4957V9.4253l6-4.2178v13.585l-6-4.2968z"
          fill="#303030"
        />
      </Svg>
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#303030",
              "fontFamily": null,
              "fontSize": 14,
              "lineHeight": 15.87,
            }
          }
        >
          Marty McFly
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": null,
            "fontSize": 14,
            "lineHeight": 15.87,
          }
        }
      >
        Invalid date
      </Text>
    </View>
  </View>
</View>
`;

exports[`the Card component should render 1`] = `
<View
  style={
    Object {
      "aspectRatio": 1,
      "backgroundColor": "#dddddd",
      "borderRadius": 6,
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "paddingHorizontal": 20,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      size={1}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderBottomRightRadius": 6,
          "borderTopLeftRadius": 6,
          "height": 36,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 36,
        }
      }
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#303030",
              "fontFamily": null,
              "fontSize": 15.75,
              "fontWeight": "700",
              "lineHeight": 17.85,
            }
          }
        >
          7
        </Text>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": null,
          "fontSize": 25.2,
          "fontWeight": "700",
          "lineHeight": 31.28,
        }
      }
    >
      Sermon Title
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingTop": 10,
        }
      }
    >
      <Svg
        height={18}
        viewBox="0 0 24 24"
        width={18}
      >
        <Path
          d="M3.8182 5.7778v12.4444H14.2V5.7778H3.8182zM16 6v12c0 1.1046-.8954 2-2 2H4c-1.1046 0-2-.8954-2-2V6c0-1.1046.8954-2 2-2h10c1.1046 0 2 .8954 2 2zm4.1818 2.6952L16 11.8084v.3832l4.1818 3.251V8.695zM16 14.4957V9.4253l6-4.2178v13.585l-6-4.2968z"
          fill="#303030"
        />
      </Svg>
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#303030",
              "fontFamily": null,
              "fontSize": 14,
              "lineHeight": 15.87,
            }
          }
        >
          Marty McFly
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": null,
            "fontSize": 14,
            "lineHeight": 15.87,
          }
        }
      >
        Invalid date
      </Text>
    </View>
  </View>
</View>
`;
